Cannot use italic font style if the font has embedded bitmap

XMLWordPrintable

    • b24
    • generic
    • generic

        Issue:
        1. I ran Font2DTest Demo on Windows Server 2012 R2
        2. Select
          Font: MS Mincho
          Range: Basic Latin
          Method: drawString
          Size: 24
          Style: Italic
        But the style does not change to italic.

        It seems it's side-effect for:
        8204929: Fonts with embedded bitmaps are not always rotated

        Initial review request:
        http://mail.openjdk.java.net/pipermail/2d-dev/2018-November/009652.html

        Test case's result is as follows:
        === Before fixed ===
        >java FontGlyphCompare
        OS is Windows Server 2012 R2
        Exception in thread "main" java.lang.Exception: Test failed
                at FontGlyphCompare.main(FontGlyphCompare.java:79)

        === After fixed ===
        >java FontGlyphCompare
        OS is Windows Server 2012 R2

              Assignee:
              Ichiroh Takiguchi
              Reporter:
              Ichiroh Takiguchi
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: