8214002: Cannot use italic font style if the font has embedded bitmap

Reviewed-by: prr